# test_wasm

./: README.md
docs/: index.html
docs/assets/: index-BbmyoIjB.js  index-CuwC9T-X.js  index-DukR5O3R.js  index-iU8VsiuV.js  test_wasm_rust_bg-BtX31iXy.wasm
test_wasm_front/: .gitignore  package-lock.json  package.json  vite.config.js
test_wasm_front/src/: App.jsx
test_wasm_front/src/lib/: common.js
test_wasm_front/src/pages/: Fibonacci.jsx  Home.jsx  Sql.jsx
test_wasm_front/test_wasm_rust/: Cargo.toml
test_wasm_front/test_wasm_rust/src/: lib.rs
test_wasm_rust/: Cargo.toml
test_wasm_rust/src/: lib.rs
